- fix showing/hiding s-ubheader on mobile #2130

--- a/src/assets/css/header.css
+++ b/src/assets/css/header.css
@@ -330,7 +330,6 @@
 .btn-header-open {
     border-width: 1px 1px 0 1px;
     border-style: solid;
-    pointer-events: none;
 }
 
 .btn-header {
